# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-worker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Workers backend for Daphne"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# TODO(mendess): delete
bincode.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock", "wasmbind"] }
daphne = { path = "../daphne", features = ["prometheus"] }
futures = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["js"] }
hex.workspace = true
prio.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest-wasm.workspace = true
ring.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-core.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"]}
tracing.workspace = true
url.workspace = true
worker.workspace = true

[dependencies.daphne-service-utils]
path = "../daphne-service-utils"
features = ["prometheus", "durable_requests"]

[dev-dependencies]
daphne = { path = "../daphne", features = ["test-utils"] }
paste.workspace = true
reqwest.workspace = true # used in doc tests

[features]
test-utils = ["daphne-service-utils/test-utils", "dep:futures"]

[lints]
workspace = true
