# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne-worker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Workers backend for Daphne"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum.workspace = true
axum-extra = { workspace = true, features = ["typed-header"] }
# TODO(mendess): delete
bincode.workspace = true
bytes.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock", "wasmbind"] }
constcat.workspace = true
daphne = { path = "../daphne", features = ["prometheus"] }
futures = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["js"] }
headers.workspace = true
hex.workspace = true
http-body-util.workspace = true
http.workspace = true
opentelemetry-http.workspace = true
opentelemetry.workspace = true
prio.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest-wasm.workspace = true
ring.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-core.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"]}
tracing.workspace = true
url.workspace = true
wasm-streams.workspace = true
worker.workspace = true
tower-service.workspace = true

[dependencies.daphne-service-utils]
path = "../daphne-service-utils"
features = ["prometheus", "durable_requests"]

[dev-dependencies]
daphne = { path = "../daphne", features = ["test-utils"] }
paste.workspace = true
reqwest.workspace = true # used in doc tests

[features]
test-utils = ["daphne-service-utils/test-utils", "dep:futures"]

[lints]
workspace = true
