# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Implementation of the DAP specification"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
deepsize = { workspace = true, optional = true }
futures.workspace = true
hex.workspace = true
hpke-rs = { workspace = true, features = ["hazmat", "serialization"] }
hpke-rs-crypto.workspace = true
hpke-rs-rust-crypto.workspace = true
prio = { workspace = true, features = ["experimental"] }
prometheus = { workspace = true, optional = true }
rand.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
pin-project = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
criterion.workspace = true
deepsize.workspace = true
matchit.workspace = true
paste.workspace = true
prio = { workspace = true, features = ["test-util"] }
prometheus.workspace = true
regex.workspace = true
strum.workspace = true
tokio.workspace = true

[features]
test-utils = ["dep:deepsize", "dep:prometheus", "dep:pin-project"]
report-generator = ["test-utils", "dep:tokio", "dep:rayon", "tokio/sync"]
default = []
prometheus = ["dep:prometheus"]

[[bench]]
name = "vdaf"
harness = false

[lints]
workspace = true
