# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Implementation of the DAP specification"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
deepsize = { workspace = true, optional = true }
futures.workspace = true
hex.workspace = true
hpke-rs = { workspace = true, features = ["hazmat", "serialization"] }
hpke-rs-crypto.workspace = true
hpke-rs-rust-crypto.workspace = true
prio_draft09 = { workspace = true, features = ["experimental"] }
prio = { workspace = true, features = ["experimental"] }
prometheus = { workspace = true, optional = true }
rand.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
tokio = { workspace = true, optional = true }
rayon = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
assert_matches.workspace = true
criterion.workspace = true
deepsize.workspace = true
matchit.workspace = true
paste.workspace = true
prio_draft09 = { workspace = true, features = ["test-util"] }
prio = { workspace = true, features = ["test-util"] }
prometheus.workspace = true
rayon.workspace = true
regex.workspace = true
strum.workspace = true
tokio.workspace = true

[features]
experimental = []
test-utils = ["dep:deepsize", "dep:prometheus"]
report-generator = ["test-utils", "dep:tokio", "tokio/sync"]
default = []
prometheus = ["dep:prometheus"]

[[bench]]
name = "vdaf"
harness = false

[[bench]]
name = "aggregation"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "pine"
harness = false

[lints]
workspace = true
