# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "daphne_service_utils"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/cloudflare/daphne"
repository = "https://github.com/cloudflare/daphne"
readme = "../README.md"

[dependencies]
async-trait.workspace = true
capnp = { workspace = true, optional = true }
daphne = { path = "../daphne", default-features = false }
futures.workspace = true
itertools.workspace = true
hex.workspace = true
p256.workspace = true
prometheus = { workspace = true, optional = true }
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
rayon.workspace = true

[dev-dependencies]
daphne = { path = "../daphne", default-features = false, features = ["prometheus"] }
prometheus.workspace = true
rand.workspace = true

[build-dependencies]
capnpc = { version = "0.18.1", optional = true }

[features]
test-utils = ["dep:prometheus", "daphne/prometheus", "daphne/test-utils"]
prometheus = ["dep:prometheus", "daphne/prometheus"]
durable_requests = ["dep:capnp", "dep:capnpc"]

[lints]
workspace = true
