# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "dapf"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
daphne = { path = ".." }
assert_matches = "1.5.0"
base64 = "0.21.2"
prio = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["macros", "rt"] }
