# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "dapf"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
daphne = { path = "..", features = ["prometheus"] }
prio.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
