# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "dapf"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
daphne = { path = "../../daphne" }
daphne_service_utils = { path = ".." }
prio.workspace = true
rand.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
webpki.workspace = true
x509-parser.workspace = true
