# Copyright (c) 2024 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "dapf"
version = "0.3.0"
authors = [
  "Christopher Patton <cpatton@cloudflare.com>",
  "Armando Faz Hernandez <armfazh@cloudflare.com>",
  "Pedro Mendes <pmendes@cloudflare.com>",
]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
daphne = { path = "../../daphne", features = ["test-utils", "prometheus"] }
daphne_service_utils = { path = ".." }
deepsize.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
pin-project.workspace = true
prio.workspace = true
prometheus.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json"] }
sentry.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true
webpki.workspace = true
x509-parser.workspace = true
